--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.0.10",
+    "react": "^17.0.2",
+    "react-dom": "17.0.2",
+    "react-router": "^6.2.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
-    "eslint-config-next": "^12.0.8"
+    "eslint-config-next": "^12.0.8",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18"
   }
 }
