--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^8.8.1",
+    "@react-three/fiber": "^7.0.26",
     "next": "^12.0.10",
     "react": "^17.0.2",
-    "react-dom": "17.0.2",
-    "react-router": "^6.2.1"
+    "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
+    "react-select": "^5.2.2",
+    "three": "^0.137.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
